# mini-backtesting-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mini_backtesting_api.py  pyproject.toml
app/adapters/: s3_client.py
app/api/v1/routes/: backtest.py
app/api/v1/service_routes/: __init__.py  healthcheck.py  ping.py
app/core/: init_app.py  logging.py  storage.py
app/models/: __init__.py  calendar_rule.py  configs.py  healthcheck.py  portfolio_filter.py  s3.py  weighting.py
app/schemas/: errors.py  requests.py  responses.py
app/services/: data_processsor.py
app/utils/: healthcheck.py
tests/: conftest.py  test_backtest.py  test_dates_filter.py  test_portfolio_filter.py  test_weighting.py
